[gd_scene load_steps=10 format=3 uid="uid://cxco7l6jgsf2"]

[ext_resource type="Script" uid="uid://3l8nh0mxslqc" path="res://scripts/battle/battle_scene.gd" id="1_2wmvw"]
[ext_resource type="Texture2D" uid="uid://4im0spyblxwl" path="res://assets/ui/enhanced_overlay.png" id="2_ww1p6"]
[ext_resource type="Script" uid="uid://bgiiwmtkdh216" path="res://scripts/card/card_pile_ui.gd" id="3_cywj5"]
[ext_resource type="PackedScene" uid="uid://cmlsueqj3ow61" path="res://scripts/card/styled_card_ui.tscn" id="4_2wmvw"]
[ext_resource type="Script" uid="uid://b3vqhxkwjhf6m" path="res://scripts/card/combination_dropzone.gd" id="5_3511k"]
[ext_resource type="Texture2D" uid="uid://cmfpp08onmr3f" path="res://assets/cards/card_clubs_07.png" id="6_puhd7"]
[ext_resource type="Texture2D" uid="uid://42qs2jq604nw" path="res://assets/enemies/enemy_placeholder.png" id="7_mpswg"]
[ext_resource type="Script" uid="uid://bbq3kiis6024t" path="res://scripts/battle/battle_manager.gd" id="8_te27b"]
[ext_resource type="Script" uid="uid://cqdirjoo5youj" path="res://scripts/card/card_queue_dropzone.gd" id="9_ckjfl"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_2wmvw")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
offset_left = 3.0
offset_top = 5.0
offset_right = 1603.0
offset_bottom = 905.0
texture = ExtResource("2_ww1p6")
expand_mode = 1

[node name="CardPileUI" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 15.0
offset_right = 16.0
offset_bottom = 17.0
script = ExtResource("3_cywj5")
json_card_database_path = "res://data/cards.json"
json_card_collection_path = "res://data/collection.json"
extended_card_ui = ExtResource("4_2wmvw")
stack_display_gap = null
max_stack_display = null
card_return_speed = null
click_draw_pile_to_draw = null
cant_draw_at_hand_limit = null
shuffle_discard_on_empty_draw = null
draw_pile_layout = null
hand_enabled = null
hand_face_up = null
max_hand_size = 7
max_hand_spread = 800
card_ui_hover_distance = null
drag_when_clicked = null
discard_face_up = null
discard_pile_layout = null

[node name="CombinationDropzone" type="Control" parent="." node_paths=PackedStringArray("card_pile_ui")]
modulate = Color(0.804596, 0.934213, 0.842941, 1)
self_modulate = Color(0.589122, 0.477859, 0.620659, 1)
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 1614.0
offset_top = 491.0
offset_right = 1873.0
offset_bottom = 897.0
script = ExtResource("5_3511k")
card_pile_ui = NodePath("../CardPileUI")

[node name="Background" type="TextureRect" parent="CombinationDropzone"]
layout_mode = 0
offset_right = 260.0
offset_bottom = 416.0
texture = ExtResource("6_puhd7")

[node name="CardQueueDropzone" type="Control" parent="." node_paths=PackedStringArray("card_pile_ui")]
layout_mode = 3
anchors_preset = 0
offset_left = 493.0
offset_top = 281.0
offset_right = 1033.0
offset_bottom = 481.0
script = ExtResource("9_ckjfl")
card_pile_ui = NodePath("../CardPileUI")

[node name="QueueLabel" type="Label" parent="CardQueueDropzone"]
layout_mode = 0
offset_left = -3.0
offset_top = -35.0
offset_right = 97.0
offset_bottom = 1.0
theme_override_font_sizes/font_size = 24
text = "出牌队列"

[node name="Background" type="Panel" parent="CardQueueDropzone"]
self_modulate = Color(0.478431, 0.478431, 0.478431, 0.254902)
layout_mode = 0
offset_right = 540.0
offset_bottom = 200.0

[node name="QueueScoreLabel" type="Label" parent="CardQueueDropzone"]
layout_mode = 0
offset_left = 8.0
offset_top = 166.0
offset_right = 532.0
offset_bottom = 198.0
theme_override_font_sizes/font_size = 20
text = "队列分数: 0"

[node name="EnemyDisplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 90.0
offset_bottom = 160.0

[node name="EnemyImage" type="TextureRect" parent="EnemyDisplay"]
layout_mode = 0
offset_left = 1225.0
offset_top = 223.0
offset_right = 1275.0
offset_bottom = 274.0
scale = Vector2(4.62852, 9.8434)
texture = ExtResource("7_mpswg")
expand_mode = 3

[node name="EnemyName" type="Label" parent="EnemyDisplay"]
layout_mode = 0
offset_left = 978.0
offset_top = 150.0
offset_right = 1178.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 50
text = "敌人名称"

[node name="EnemyHealth" type="ProgressBar" parent="EnemyDisplay"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 1192.0
offset_top = 160.0
offset_right = 1492.0
offset_bottom = 219.0
theme_override_font_sizes/font_size = 40

[node name="EnemyDescription" type="RichTextLabel" parent="EnemyDisplay"]
layout_mode = 0
offset_left = 964.0
offset_top = 301.0
offset_right = 1217.0
offset_bottom = 570.0
text = "敌人描述"
fit_content = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreDisplay" type="Label" parent="UI"]
offset_left = 809.0
offset_top = 100.0
offset_right = 949.0
offset_bottom = 142.0
theme_override_font_sizes/font_size = 30
text = "分数: 0"

[node name="TurnsDisplay" type="Label" parent="UI"]
offset_left = 500.0
offset_top = 100.0
offset_right = 670.0
offset_bottom = 142.0
theme_override_font_sizes/font_size = 30
text = "剩余行动: 3"

[node name="PlayerHealth" type="ProgressBar" parent="UI"]
modulate = Color(1, 0.14, 0.14, 1)
offset_left = 154.0
offset_top = 159.0
offset_right = 454.0
offset_bottom = 209.0
theme_override_font_sizes/font_size = 30

[node name="ActionButtons" type="HBoxContainer" parent="UI"]
offset_left = 497.0
offset_top = 705.0
offset_right = 1085.0
offset_bottom = 756.0

[node name="PlayCardButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "打出选中牌"

[node name="EndTurnButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "结束回合"

[node name="UseItemButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "使用道具"

[node name="EnterShopButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "（调试）进入商店"

[node name="TestRewardButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2
text = "测试奖励"

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
offset_left = 2013.0
offset_top = 296.0
offset_right = 2134.0
offset_bottom = 336.0

[node name="ResultLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 30.0
text = "失败！"

[node name="VictoryPanel" type="Panel" parent="UI"]
visible = false
offset_left = 2014.0
offset_top = 241.0
offset_right = 2134.0
offset_bottom = 281.0

[node name="ResultLabel" type="Label" parent="UI/VictoryPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 9.0
offset_right = 52.0
offset_bottom = 32.0
text = "胜利！"

[node name="CombinationResult" type="RichTextLabel" parent="UI"]
offset_left = 1622.0
offset_top = 404.0
offset_right = 1862.0
offset_bottom = 444.0

[node name="BattleManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_te27b")
